--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ocean_Android_Introducao_07_10_2021</string>
+    <string name="tvTextoTopo">Hello World!</string>
 </resources>
