--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Ocean_Android_Introducao_07_10_2021</string>
     <string name="tvTextoTopo">Hello World!</string>
+    <string name="etTextoEditavel">New Text</string>
+    <string name="btAtualizar">Update</string>
+    <string name="tvTextoEditavelDica">Insert a new text here!</string>
 </resources>
